# waffle

./: CMakeLists.txt
cmake/Modules/: WaffleAutoConfigureOptions.cmake
examples/: CMakeLists.txt  Makefile.example  cross-api.c
pkg/archlinux/: PKGBUILD.multilib
src/waffle/: CMakeLists.txt
src/waffle/api/: waffle_attrib_list.c
src/waffle/egl/: wegl_config.c  wegl_context.c  wegl_context.h  wegl_display.c  wegl_util.c  wegl_util.h
src/waffle/glx/: glx_context.c
src/waffle/linux/: linux_dl.c
tests/unittests/waffle/api/: waffle_attrib_list_unittest.c
